after careful deliberation, decided to go for rollup as a bundler

--- a/examples/default/index.html
+++ b/examples/default/index.html
@@ -34,7 +34,7 @@
 
 <body>
   <h1>Sema engine – Default language</h1>
-  <p>You might need to clean the cache when testing your worklet processor code</p>
+  <p>You might need to clean the cache when testing your worklet processor code (Cmd-Shift-Backspace/Ctrl-Shift-Backspace)</p>
 
   <div class="editor-container">
     <textarea id="textArea"></textarea>
