--- a/examples/index.html
+++ b/examples/index.html
@@ -51,7 +51,7 @@
 
   <script type="module">
 
-    import { AudioEngine } from "sema-engine.mjs";
+    import { AudioEngine } from "./sema-engine.js";
 
     let audioEngine;
 
