--- a/example/index.html
+++ b/example/index.html
@@ -49,14 +49,64 @@
     <button id="loadSamplesButton">Load Samples</button>
   </div>
 
-  <script type="module" src="main.js"></script>
+  <script type="module">
+
+    import { AudioEngine } from "./sema-engine.js";
+
+    let audioEngine;
+
+    const $ = (elemId, callback) =>
+      document.getElementById(elemId).addEventListener("click", callback);
+
+    $("playButton", () => {
+      let audioWorkletURL = document.location.origin + "/sema-engine/maxi-processor.js";
+      audioEngine = new AudioEngine();
+      audioEngine.init(audioWorkletURL);
+      audioEngine.play();
+    });
+
+    $("stopButton", () => audioEngine.stop());
+    $("plusButton", () => audioEngine.more());
+    $("minusButton", () => audioEngine.less());
+    $("evalButton", () => {
+      let editorValue = editor.getValue();
+      console.log(editorValue);
+      audioEngine.eval({
+        setup: `() => {
+          let q = this.newq();;
+          q.b0l5 = new Float64Array(2);
+          q.b0l5[0] = 3;
+          q.b0l5[1] = 2;
+          q.b0u3 = new Maximilian.maxiRatioSeq();;
+          q.b0u2 = new Maximilian.maxiSample();
+          q.b0u2.setSample(this.getSampleBuffer('crebit2'));;
+          q.b0u1 = new Maximilian.maxiNonlinearity();;
+          q.b0l9 = new Float64Array(2);
+          q.b0l9[0] = 1;
+          q.b0l9[1] = 0;
+          q.b0u7 = new Maximilian.maxiRatioSeq();;
+          q.b0u6 = new Maximilian.maxiSample();
+          q.b0u6.setSample(this.getSampleBuffer('snare1'));;;;;
+          return q; }`,
+        loop: `(q, inputs, mem) => {
+          (mem[0] = q.b0u1.asymclip((q.b0u2.isReady() ? q.b0u2.playOnZX(q.b0u3.playTrig(this.clockPhase(4, 0), (() => { return q.b0l5 })())) : 0.0), 2, 0.1));
+          (mem[1] = (q.b0u6.isReady() ? q.b0u6.playOnZX(q.b0u7.playTrig(this.clockPhase(8, 0), (() => { return q.b0l9 })())) : 0.0));
+          this.dacOutAll(((mem[0] != undefined ? mem[0] : 0) + (mem[1] != undefined ? mem[1] : 0)));}`,
+      });
+    });
+
+    $("loadSamplesButton", () => {
+      audioEngine.loadSample("crebit2.ogg", "./audio/crebit2.ogg");
+      audioEngine.loadSample("kick1.wav", "./audio/kick1.wav");
+      audioEngine.loadSample("snare1.wav", "./audio/snare1.wav");
+    });
+  </script>
   <script>
     let textArea = document.getElementById("textArea");
     let editor = CodeMirror.fromTextArea(textArea, {
       lineNumbers: true,
       mode: "javascript"
     });
-
   </script>
 </body>
 </html>
