--- a/example/index.html
+++ b/example/index.html
@@ -51,7 +51,7 @@
 
   <script type="module">
 
-    import { AudioEngine } from "./sema-engine.js";
+    import { AudioEngine } from "./sema-engine.mjs";
 
     let audioEngine;
 
@@ -59,7 +59,7 @@
       document.getElementById(elemId).addEventListener("click", callback);
 
     $("playButton", () => {
-      let audioWorkletURL = document.location.origin + "/sema-engine/maxi-processor.js";
+      let audioWorkletURL = document.location.origin + "/maxi-processor.js";
       audioEngine = new AudioEngine();
       audioEngine.init(audioWorkletURL);
       audioEngine.play();
