updating visualiser implementation

--- a/example/index.html
+++ b/example/index.html
@@ -53,7 +53,8 @@
 
     import { AudioEngine } from "./sema-engine.mjs";
 
-    let audioEngine;
+    let audioEngine,
+        analyserId = 0;
 
     const $ = (elemId, callback) =>
       document.getElementById(elemId).addEventListener("click", callback);
@@ -64,7 +65,6 @@
       audioEngine.init(audioWorkletURL);
       audioEngine.play();
     });
-
     $("stopButton", () => audioEngine.stop());
     $("plusButton", () => audioEngine.more());
     $("minusButton", () => audioEngine.less());
@@ -100,6 +100,9 @@
       audioEngine.loadSample("kick1.wav", "./audio/kick1.wav");
       audioEngine.loadSample("snare1.wav", "./audio/snare1.wav");
     });
+
+    $("createAnalyserButton", () => audioEngine.createAnalyser( analyserId++, data => console.log(data) ));
+
   </script>
   <script>
     let textArea = document.getElementById("textArea");
