refactoring index .js scripts

--- a/assets/index.html
+++ b/assets/index.html
@@ -54,46 +54,73 @@
 
     import { Engine } from "./sema-engine.mjs";
 
-    let audioEngine,
+    let engine,
         analyser = 0;
+
+
+    let patch1 = {
+          setup: `() => {
+            () => {
+              let q = this.newq();
+              q.b0u2 = new Maximilian.maxiOsc();
+              q.b0u2.phaseReset(0);;;;
+              return q;
+            }
+          }`,
+          loop: `(q, inputs, mem) => {
+            this.dacOutAll(q.b0u2.sinewave(440));
+          }`
+    };
+
+    let patch2 = {
+          setup: `() => {
+            let q = this.newq();;
+            q.b0l5 = new Float64Array(2);
+            q.b0l5[0] = 3;
+            q.b0l5[1] = 2;
+            q.b0u3 = new Maximilian.maxiRatioSeq();;
+            q.b0u2 = new Maximilian.maxiSample();
+            q.b0u2.setSample(this.getSampleBuffer('crebit2'));;
+            q.b0u1 = new Maximilian.maxiNonlinearity();;
+            q.b0l9 = new Float64Array(2);
+            q.b0l9[0] = 1;
+            q.b0l9[1] = 0;
+            q.b0u7 = new Maximilian.maxiRatioSeq();;
+            q.b0u6 = new Maximilian.maxiSample();
+            q.b0u6.setSample(this.getSampleBuffer('snare1'));;;;;
+            return q; }`,
+          loop: `(q, inputs, mem) => {
+            (mem[0] = q.b0u1.asymclip((q.b0u2.isReady() ? q.b0u2.playOnZX(q.b0u3.playTrig(this.clockPhase(4, 0), (() => { return q.b0l5 })())) : 0.0), 2, 0.1));
+            (mem[1] = (q.b0u6.isReady() ? q.b0u6.playOnZX(q.b0u7.playTrig(this.clockPhase(8, 0), (() => { return q.b0l9 })())) : 0.0));
+            this.dacOutAll(((mem[0] != undefined ? mem[0] : 0) + (mem[1] != undefined ? mem[1] : 0)));
+          }`,
+        };
 
     const $ = (elemId, callback) =>
       document.getElementById(elemId).addEventListener("click", callback);
 
     $("playButton", () => {
       let audioWorkletURL = document.location.origin + "/maxi-processor.js";
-      audioEngine = new Engine();
-      audioEngine.init(audioWorkletURL);
-      audioEngine.play();
+      engine = new Engine();
+      engine.init(audioWorkletURL);
+      engine.play();
     });
-    $("stopButton", () => audioEngine.stop());
-    $("plusButton", () => audioEngine.more());
-    $("minusButton", () => audioEngine.less());
+    $("stopButton", () => engine.stop());
+    $("plusButton", () => engine.more());
+    $("minusButton", () => engine.less());
     $("loadSamplesButton", () => {
-      audioEngine.loadSample("crebit2.ogg", "./audio/crebit2.ogg");
-      audioEngine.loadSample("kick1.wav", "./audio/kick1.wav");
-      audioEngine.loadSample("snare1.wav", "./audio/snare1.wav");
+      engine.loadSample("crebit2.ogg", "./audio/crebit2.ogg");
+      engine.loadSample("kick1.wav", "./audio/kick1.wav");
+      engine.loadSample("snare1.wav", "./audio/snare1.wav");
     });
     $("evalButton", () => {
       let editorValue = editor.getValue();
       console.log(editorValue);
-      audioEngine.eval({
-        setup: `() => {
-          () => {
-            let q = this.newq();
-            q.b0u2 = new Maximilian.maxiOsc();
-            q.b0u2.phaseReset(0);;;;
-            return q;
-          }
-        }`,
-        loop: `(q, inputs, mem) => {
-          this.dacOutAll(q.b0u2.sinewave(129.2));
-        }`
-      });
+      engine.eval(patch2);
     });
 
     $("createAnalyserButton", () => {
-      audioEngine.createAnalyser(analyser++, data => console.log(data) );
+      engine.createAnalyser(analyser++, data => console.log(data) );
     });
 
   </script>
