compile workflow working

--- a/assets/index.html
+++ b/assets/index.html
@@ -112,7 +112,7 @@
           engine.eval(dspCode);
         }
       } catch (err) {
-        console.error("ERROR: Eval – sema compiler: ", err);
+        console.error("ERROR: Failed to compile and eval: ", err);
       }
     });
 
