reorganised test files; integration tests for default language

--- a/assets/index.html
+++ b/assets/index.html
@@ -128,7 +128,7 @@
       lineNumbers: true,
     });
 
-    fetch(document.location.origin + '/langs/default-livecode.txt')
+    fetch(document.location.origin + '/langs/default-1-lc.txt')
       .then( response => response.text() )
       .then( data => editorLivecode.setValue(data) )
 
